k8s/stock-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: stock-service
spec:
  type: ClusterIP
  selector:
    component: stock
  ports:
    - port: 5000
      name: http
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stock-deployment
spec:
  replicas: 3  # Can be increased for scalability
  selector:
    matchLabels:
      component: stock
  template:
    metadata:
      labels:
        component: stock
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: component
                operator: In
                values:
                - stock
            topologyKey: "kubernetes.io/hostname"
      terminationGracePeriodSeconds: 60
      containers:
        - name: stock
          lifecycle:
            preStop:
              exec:
                command: ["sh", "-c", "sleep 10"]
          image: stock:latest
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: "1Gi"
              cpu: "1"
            requests:
              memory: "1Gi"
              cpu: "1"
          command:
            - /bin/sh
            - -c
            - |
              echo "Waiting for Redis Cluster..."
              until redis-cli -h stock-redis-cluster -a redis cluster info | grep -q 'cluster_state:ok'; do
                sleep 5
              done
              python kafka_consumer.py &
              hypercorn -b 0.0.0.0:5000 -w 2 --worker-class asyncio --log-level=info app:app
          ports:
            - containerPort: 5000
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /ready
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 5
