k8s/user-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  type: ClusterIP
  selector:
    component: user
  ports:
    - port: 5000
      name: http
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deployment
spec:
  replicas: 1  # Can be increased for scalability
  selector:
    matchLabels:
      component: user
  template:
    metadata:
      labels:
        component: user
    spec:
      containers:
        - name: user
          image: user:latest
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: "1Gi"
              cpu: "1"
            requests:
              memory: "1Gi"
              cpu: "1"
          command:
            - /bin/sh
            - -c
            - |
              echo "Waiting for Redis Cluster..."
              until redis-cli -h payment-redis-cluster -a redis cluster info | grep -q 'cluster_state:ok'; do
                sleep 5
              done
              python kafka_consumer.py &
              hypercorn -b 0.0.0.0:5000 -w 2 --worker-class asyncio --log-level=info app:app
          ports:
            - containerPort: 5000
          readinessProbe:
            exec:
              command: ["redis-cli", "-h", "payment-redis-cluster", "-a", "redis", "cluster", "info"]
            initialDelaySeconds: 5
            periodSeconds: 10
